# oliviazuo-portfolio

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  php.ini  requirements.txt
.github/workflows/: push-registry.yaml  service-ci-dev.yaml
container/deployment/: Dockerfile
container/dev/: Dockerfile
src/: commercial.html  commercial.php  composer.json  create-intent.php  index.html  index.php  main.rs  personal.html  personal.php  router.py  router.rs  shop.php
src/components/: config.php  footer.php  gallery.php  gallery.rs  header.php  image.php  image.rs  mod.rs  modal.php
src/components/projects/: mod.rs  project_description.rs  project_details.rs  project_tags.rs
src/components/shop/: database.php  product.php  products.php
src/html/: commercial.php  index.php  personal.php  shop.php
src/observability/: mod.rs  propagators.rs
src/repository/: mod.rs  portfolio_manager_service.rs  project_repository.rs
src/resources/js/: checkout.js  image.js  solid-gallery.js
src/resources/styles/: base-min.css  custom-grids-min.css  gallery-slider.css  modal.css  (+3 more)
src/security/: gcp_identity.rs  mod.rs
src/templates/: base.html  macros.html
src/views/: commercial.php  main.php  personal.php  shop.php
static/: sitemap.txt
static/js/: image.js  navbar.js
static/styles/: base.css  gallery-slider.css  grids.css  modal.css  navbar.css  section.css
templates/: base.hbs  base.html  macros.html  personal.hbs
templates/components/: details.hbs  gallery.hbs  image.hbs
templates/views/: commercial.hbs  index.hbs  personal.hbs  shop.html
(+33 files in other folders)
