[package]
name = "oliviazuo-portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
handlebars = "6.3.2"
minijinja = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
http = "1.3.1"